# DAItaView

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  config.py  db.py  dependencies.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_groups.py  0003_drop_user_source_permissions.py
backend/models/: audit.py  data_source.py  group.py  knowledge.py  session.py  user.py
backend/routers/: audit.py  auth.py  data_sources.py  groups.py  knowledge.py  sessions.py  users.py
backend/services/: audit_service.py  auth_service.py  code_generation.py  context_strategy.py  data_source_manager.py  embedding_service.py  gap_service.py  group_service.py  knowledge_service.py  permission_service.py  query_pipeline.py  session_service.py  token_estimator.py  turn_service.py  user_service.py
backend/tests/: conftest.py  test_e2e_chart_staleness.py  test_e2e_multiturn.py  test_e2e_table_permission.py
execution/: Dockerfile  importer.py  main.py
execution/tests/: test_execution_engine.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/admin/: AdminLayout.module.css  AdminLayout.tsx  AuditLogPage.module.css  AuditLogPage.tsx  DataSourceAdminPage.module.css  DataSourceAdminPage.tsx  GroupManagementPage.module.css  GroupManagementPage.tsx  GroupPermissionEditor.tsx  (+7 more)
test-data/: TESTING.md  docker-compose.yml  mock_customers.json  mock_sales.csv
test-data/init/: 01_schema.sql  02_mock_data.sql
(+36 files in other folders)
